# TLSMessageKaitais

./: CMakeLists.txt
kaitais/: tls_record.ksy
src/cpp/autogen/: tls_client_hello.cpp  tls_client_hello.h  tls_handshake_record.cpp  tls_handshake_record.h  tls_record.cpp  tls_record.h
src/kaitais/: tls_handshake.ksy
test/cpp/: test_autogenerated_parsing.cpp
